Partial Forge support